// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MagicLogin /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-idXgbr huQjaB page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
    <div
      class="sc-fEXmlR gRuFyG"
    >
      <div
        class="sc-bjfHbI sLlBn"
      />
      <div
        class="sc-bjfHbI cZxaTL"
      />
      <div
        class="sc-bjfHbI fGfEDI"
      />
      <div
        class="sc-bjfHbI dVCdIB"
      />
      <div
        class="sc-bjfHbI hKVvxq"
      />
      <div
        class="sc-bjfHbI bOhkuX"
      />
      <div
        class="sc-bjfHbI EhuPD"
      />
      <div
        class="sc-bjfHbI hnHELH"
      />
    </div>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-idXgbr huQjaB page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
    <div
      class="sc-fEXmlR gRuFyG"
    >
      <div
        class="sc-bjfHbI sLlBn"
      />
      <div
        class="sc-bjfHbI cZxaTL"
      />
      <div
        class="sc-bjfHbI fGfEDI"
      />
      <div
        class="sc-bjfHbI dVCdIB"
      />
      <div
        class="sc-bjfHbI hKVvxq"
      />
      <div
        class="sc-bjfHbI bOhkuX"
      />
      <div
        class="sc-bjfHbI EhuPD"
      />
      <div
        class="sc-bjfHbI hnHELH"
      />
    </div>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with logInError 1`] = `
<div>
  <div
    class="sc-idXgbr huQjaB page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
    <div
      class="sc-fEXmlR gRuFyG"
    >
      <div
        class="sc-bjfHbI sLlBn"
      />
      <div
        class="sc-bjfHbI cZxaTL"
      />
      <div
        class="sc-bjfHbI fGfEDI"
      />
      <div
        class="sc-bjfHbI dVCdIB"
      />
      <div
        class="sc-bjfHbI hKVvxq"
      />
      <div
        class="sc-bjfHbI bOhkuX"
      />
      <div
        class="sc-bjfHbI EhuPD"
      />
      <div
        class="sc-bjfHbI hnHELH"
      />
    </div>
    <span
      class="sc-hBxehG jiKGja"
    >
      <span
        class="sc-fnGiBr fmcxCo"
      >
        Something went wrong logging you in
        <br />
        Invalid session
        <br />
        <a
          class="sc-gswNZR bbFtvE"
          href="/login"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Try logging in again
          </span>
        </a>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with loggingIn=true 1`] = `
<div>
  <div
    class="sc-idXgbr huQjaB page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
    <div
      class="sc-fEXmlR gRuFyG"
    >
      <div
        class="sc-bjfHbI sLlBn"
      />
      <div
        class="sc-bjfHbI cZxaTL"
      />
      <div
        class="sc-bjfHbI fGfEDI"
      />
      <div
        class="sc-bjfHbI dVCdIB"
      />
      <div
        class="sc-bjfHbI hKVvxq"
      />
      <div
        class="sc-bjfHbI bOhkuX"
      />
      <div
        class="sc-bjfHbI EhuPD"
      />
      <div
        class="sc-bjfHbI hnHELH"
      />
    </div>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-idXgbr huQjaB page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Logged in
      </h1>
    </div>
    <span
      class="sc-hBxehG jiKGja"
    >
      Logged in!
      <br />
      You will now be redirected to the 
      account
       page
      <br />
      <a
        class="sc-gswNZR bbFtvE"
        href="account"
      >
        <span
          class="sc-ftTHYK cRFGYD"
        >
          Not been redirected? Click here
        </span>
      </a>
    </span>
    <div
      class="sc-fEXmlR gRuFyG"
    >
      <div
        class="sc-bjfHbI sLlBn"
      />
      <div
        class="sc-bjfHbI cZxaTL"
      />
      <div
        class="sc-bjfHbI fGfEDI"
      />
      <div
        class="sc-bjfHbI dVCdIB"
      />
      <div
        class="sc-bjfHbI hKVvxq"
      />
      <div
        class="sc-bjfHbI bOhkuX"
      />
      <div
        class="sc-bjfHbI EhuPD"
      />
      <div
        class="sc-bjfHbI hnHELH"
      />
    </div>
  </div>
</div>
`;
